--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -28,7 +28,9 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/mybar]
-monitor = ${env:MONITOR:HDMI-2}
+monitor = ${env:MONITOR:}
+monitor-fallback = LVDS-1
+
 width = 100%
 height = 27
 ;offset-x = 1%
@@ -51,18 +53,14 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = Fantasque Sans Mono:pixelsize=12:antialias=true:autohint=true;1
-;font-0 = fixed:pixelsize=10;1
-;font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-;font-2 = siji:pixelsize=10;1
-
+font-0 = Fantasque Sans Mono:pixelsize=10:antialias=true:autohint=true;1
 
 modules-left = bspwm
 modules-center = xwindow
-modules-right = pulseaudio battery temperature date
+modules-right = pulseaudio memory cpu wlan eth battery temperature date
 
 [bar/example]
-monitor = ${env:MONITOR:HDMI-2}
+;monitor = ${env:MONITOR:HDMI-2}
 width = 100%
 height = 27
 ;offset-x = 1%
@@ -113,7 +111,7 @@ cursor-scroll = ns-resize
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:100:...%
+label = %title:0:50:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
