--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -57,7 +57,7 @@ font-0 = Fantasque Sans Mono:pixelsize=10:antialias=true:autohint=true;1
 
 modules-left = bspwm
 modules-center = xwindow
-modules-right = pulseaudio memory cpu wlan eth battery temperature date
+modules-right = alsa memory cpu wlan eth battery temperature date
 
 [bar/example]
 ;monitor = ${env:MONITOR:HDMI-2}
@@ -252,7 +252,7 @@ label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlp3s0
+interface = wlan0
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
